Fixed overflow on home page

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
 
 .home {
     position: relative;
+    overflow: hidden;
 }
 
 .intro * {
